--- a/.github/workflows/build-ios-1.yml
+++ b/.github/workflows/build-ios-1.yml
@@ -1,4 +1,4 @@
-name: Build Flutter iOS IPA23
+name: Build Flutter iOS IPA 24
 on:
   push:
     branches:
@@ -46,16 +46,12 @@ jobs:
         run: |
           echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > certificate.p12
           ls -l certificate.p12
-          # Import certificate with trust settings
           security import certificate.p12 -k "$RUNNER_TEMP/temp.keychain-db" -P "$IOS_CERTIFICATE_PASSWORD" -T /usr/bin/codesign -T /usr/bin/security || exit 1
-          # Set keychain permissions for codesign
           security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$RUNNER_TEMP/temp.keychain-db" || exit 1
-          # Verify certificate and private key
           security find-identity -v -p codesigning "$RUNNER_TEMP/temp.keychain-db" || exit 1
           security find-certificate -a -p "$RUNNER_TEMP/temp.keychain-db" > cert_details.txt
           echo "Certificate details:"
           cat cert_details.txt
-          # Check private key presence
           security find-certificate -a -c "Apple Distribution: Alireza Ehiaei" -Z "$RUNNER_TEMP/temp.keychain-db" || exit 1
       - name: Install provisioning profile
         env:
@@ -79,6 +75,15 @@ jobs:
           security find-certificate -c "Apple Distribution: Alireza Ehiaei" -p "$RUNNER_TEMP/temp.keychain-db" || echo "Certificate not found"
           security cms -D -i ~/Library/MobileDevice/Provisioning\ Profiles/*.mobileprovision || echo "Failed to decode provisioning profile"
           xcodebuild -showBuildSettings -workspace ios/Runner.xcworkspace -scheme Runner | grep CODE_SIGN_IDENTITY
+      - name: Set code signing identity explicitly
+        run: |
+          cd ios
+          sed -i '' 's|CODE_SIGN_IDENTITY = .*|CODE_SIGN_IDENTITY = "Apple Distribution: Alireza Ehiaei (AHVM2Z8TDL)"|' Runner.xcodeproj/project.pbxproj
+          sed -i '' 's|CODE_SIGN_STYLE = .*|CODE_SIGN_STYLE = Manual|' Runner.xcodeproj/project.pbxproj
+          sed -i '' 's|PROVISIONING_PROFILE_SPECIFIER = .*|PROVISIONING_PROFILE_SPECIFIER = "My MathEnglish App App Store Distribution"|' Runner.xcodeproj/project.pbxproj
+          grep "CODE_SIGN_IDENTITY" Runner.xcodeproj/project.pbxproj
+          grep "CODE_SIGN_STYLE" Runner.xcodeproj/project.pbxproj
+          grep "PROVISIONING_PROFILE_SPECIFIER" Runner.xcodeproj/project.pbxproj
       - name: Build IPA
         run: |
           flutter build ipa --release --export-options-plist=ios/ExportOptions.plist --codesign --verbose
