--- a/.github/workflows/build-ios-1.yml
+++ b/.github/workflows/build-ios-1.yml
@@ -1,4 +1,4 @@
-name: Build Flutter iOS IPA 22
+name: Build Flutter iOS IPA 25
 on:
   push:
     branches:
@@ -46,9 +46,13 @@ jobs:
         run: |
           echo "$IOS_CERTIFICATE_BASE64" | base64 --decode > certificate.p12
           ls -l certificate.p12
-          security import certificate.p12 -k "$RUNNER_TEMP/temp.keychain-db" -P "$IOS_CERTIFICATE_PASSWORD" -A -T /usr/bin/codesign || exit 1
-          security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$RUNNER_TEMP/temp.keychain-db" || exit 1
+          security import certificate.p12 -k "$RUNNER_TEMP/temp.keychain-db" -P "$IOS_CERTIFICATE_PASSWORD" -T /usr/bin/codesign -T /usr/bin/security || exit 1
+          security set-key-partition-list -S apple-tool:,apple:,codesign: -s -k "$KEYCHAIN_PASSWORD" "$RUNNER_TEMP/temp.keychain-db" || exit 1
           security find-identity -v -p codesigning "$RUNNER_TEMP/temp.keychain-db" || exit 1
+          security find-certificate -a -p "$RUNNER_TEMP/temp.keychain-db" > cert_details.txt
+          echo "Certificate details:"
+          cat cert_details.txt
+          security find-certificate -a -c "Apple Distribution: Alireza Ehiaei" -Z "$RUNNER_TEMP/temp.keychain-db" || exit 1
       - name: Install provisioning profile
         env:
           IOS_PROVISIONING_PROFILE_BASE64: ${{ secrets.IOS_PROVISIONING_PROFILE_BASE64 }}
@@ -73,7 +77,10 @@ jobs:
           xcodebuild -showBuildSettings -workspace ios/Runner.xcworkspace -scheme Runner | grep CODE_SIGN_IDENTITY
       - name: Build IPA
         run: |
-          flutter build ipa --release --export-options-plist=ios/ExportOptions.plist --codesign --verbose
+          flutter build ipa --release --export-options-plist=ios/ExportOptions.plist --codesign --verbose \
+            --dart-define=CODE_SIGN_IDENTITY="Apple Distribution: Alireza Ehiaei (AHVM2Z8TDL)" \
+            --dart-define=CODE_SIGN_STYLE=Manual \
+            --dart-define=PROVISIONING_PROFILE_SPECIFIER="My MathEnglish App App Store Distribution"
       - name: Upload IPA artifact
         uses: actions/upload-artifact@v4
         with:
