--- a/.github/workflows/ipa-generation.yml
+++ b/.github/workflows/ipa-generation.yml
@@ -1,3 +1,4 @@
+```yaml
 name: IPA Generation
 
 on:
@@ -16,12 +17,14 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          flutter-version: '3.22.2'
+          flutter-version: '3.24.3'
           channel: 'stable'
           cache: true
 
       - name: Install Flutter Dependencies
-        run: flutter pub get
+        run: |
+          flutter pub add in_app_purchase:^3.2.0
+          flutter pub get
         working-directory: .
 
       - name: Create Keychain
@@ -81,3 +84,4 @@ jobs:
           name: app-ipa
           path: $RUNNER_TEMP/ipa/*.ipa
           retention-days: 7
+```
